@@ -1,3 +1,15 @@
+Fri Feb  1 22:33:11 EET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed a bug in hash table internal routine for traversing
+	  the table with foreach callback.  The current entry may
+	  become invalid in the callback but it was referenced after
+	  the callback returned.
+
+	  Do not allow auto rehashing of hash table during the
+	  silc_hash_table_foreach operation, for same reasons as it is
+	  not allowed for SilcHashTableList.  Affected files are
+	  lib/silcutil/silchashtable.[ch].
+
 Fri Feb  1 14:55:00 CET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Defined DLLAPI into silcincludes.h and silcwin32.h for
